// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Dropdown default 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <div
    className="
    flex 
    w-full 
    mt-2
    "
  >
    <span
      className="
      flex
      w-1/2
      lg:w-1/3
      items-center
      bg-gray-100
      rounded-l
      border
      border-r-0
      border-grey-light
      px-3
      text-grey-dark
      text-sm
      whitespace-no-wrap
      "
    >
      Test Label
    </span>
    <select
      className="
      flex-shrink
      flex-grow
      flex-auto
      text-right
      leading-normal
      w-px
      flex-1
      border
      h-8
      border-grey-light
      rounded
      rounded-l-none
      px-3
      relative
      focus:border-indigo-500
      focus:outline-none
      hover:bg-gray-200
      "
    >
      <option
        value="Option 1"
      >
        Option 1
      </option>
      <option
        value="Option 2"
      >
        Option 2
      </option>
    </select>
  </div>
</div>
`;

exports[`Storyshots JobDetail default 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <div
    className="flex items-center bg-gray-100"
  >
    <div
      className="w-1/6 lg:w1-4"
    >
      <img
        src="https://connectedautomateddriving.eu/wp-content/uploads/2018/11/bosch-logo.jpg"
      />
    </div>
    <div
      className="m-4"
    >
      <div
        className="uppercase text-xl font-bold"
      >
        System Engineer
      </div>
      <div
        className="flex justify-between text-xs font-thin  text-gray-700"
      >
        <span>
          Bosch
        </span>
        <span>
          60
          %
        </span>
      </div>
      <div
        className="flex justify-between"
      >
        <span
          className="uppercase, text-xs"
        >
          Germany, Nürnberg
        </span>
        <a
          className="ml-2 text-xs font-bold"
          href="#"
        >
          Ansehen
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots JobDetail high score 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <div
    className="flex items-center bg-gray-100"
  >
    <div
      className="w-1/6 lg:w1-4"
    >
      <img
        src="https://connectedautomateddriving.eu/wp-content/uploads/2018/11/bosch-logo.jpg"
      />
    </div>
    <div
      className="m-4"
    >
      <div
        className="uppercase text-xl font-bold"
      >
        System Engineer
      </div>
      <div
        className="flex justify-between text-xs font-thin  text-gray-700"
      >
        <span>
          Bosch
        </span>
        <span>
          90
          %
        </span>
      </div>
      <div
        className="flex justify-between"
      >
        <span
          className="uppercase, text-xs"
        >
          Germany, Nürnberg
        </span>
        <a
          className="ml-2 text-xs font-bold"
          href="#"
        >
          Ansehen
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots JobDetail low score 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <div
    className="flex items-center bg-gray-100"
  >
    <div
      className="w-1/6 lg:w1-4"
    >
      <img
        src="https://connectedautomateddriving.eu/wp-content/uploads/2018/11/bosch-logo.jpg"
      />
    </div>
    <div
      className="m-4"
    >
      <div
        className="uppercase text-xl font-bold"
      >
        System Engineer
      </div>
      <div
        className="flex justify-between text-xs font-thin  text-gray-700"
      >
        <span>
          Bosch
        </span>
        <span>
          20
          %
        </span>
      </div>
      <div
        className="flex justify-between"
      >
        <span
          className="uppercase, text-xs"
        >
          Germany, Nürnberg
        </span>
        <a
          className="ml-2 text-xs font-bold"
          href="#"
        >
          Ansehen
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots JobDetail max score 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <div
    className="flex items-center bg-gray-100"
  >
    <div
      className="w-1/6 lg:w1-4"
    >
      <img
        src="https://connectedautomateddriving.eu/wp-content/uploads/2018/11/bosch-logo.jpg"
      />
    </div>
    <div
      className="m-4"
    >
      <div
        className="uppercase text-xl font-bold"
      >
        System Engineer
      </div>
      <div
        className="flex justify-between text-xs font-thin  text-gray-700"
      >
        <span>
          Bosch
        </span>
        <span>
          100
          %
        </span>
      </div>
      <div
        className="flex justify-between"
      >
        <span
          className="uppercase, text-xs"
        >
          Germany, Nürnberg
        </span>
        <a
          className="ml-2 text-xs font-bold"
          href="#"
        >
          Ansehen
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots JobDetail zero score 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <div
    className="flex items-center bg-gray-100"
  >
    <div
      className="w-1/6 lg:w1-4"
    >
      <img
        src="https://connectedautomateddriving.eu/wp-content/uploads/2018/11/bosch-logo.jpg"
      />
    </div>
    <div
      className="m-4"
    >
      <div
        className="uppercase text-xl font-bold"
      >
        System Engineer
      </div>
      <div
        className="flex justify-between text-xs font-thin  text-gray-700"
      >
        <span>
          Bosch
        </span>
        <span>
          0
          %
        </span>
      </div>
      <div
        className="flex justify-between"
      >
        <span
          className="uppercase, text-xs"
        >
          Germany, Nürnberg
        </span>
        <a
          className="ml-2 text-xs font-bold"
          href="#"
        >
          Ansehen
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Menu default 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <nav
    className="w-full bg-white border-b border-gray-400"
    id="header"
  >
    <div
      className="w-full flex flex-no-wrap items-center justify-between mt-0 py-4"
    >
      <div
        className="pl-4 flex items-center"
      >
        <a
          className="text-gray-900 text-base no-underline hover:no-underline font-extrabold text-xl"
          href="#"
        >
          Map
        </a>
      </div>
      <div
        className="flex-grow flex  items-center w-auto block"
        id="nav-content"
      >
        <div
          className="flex-1 w-full mx-auto max-w-sm content-center py-4 lg:py-0"
        >
          <div
            className="relative pull-right pl-4 pr-4 md:pr-0"
          >
            <div
              className="flex"
            >
              <input
                className="w-full 
                flex-shrink
                flex-grow
                flex-auto
                text-right
                leading-normal
                w-px
                flex-1
                border
                h-8
                transition
                border-grey-light
                rounded
                px-3
                focus:border-indigo-500
                focus:outline-none
                hover:bg-gray-200
                "
                defaultValue="Nürnberg"
                id="searchForm"
                type="search"
              />
              <button
                onClick={[Function]}
              >
                Search
              </button>
            </div>
            <div
              className="absolute search-icon"
              style={
                Object {
                  "left": "1.5rem",
                  "top": "0.5rem",
                }
              }
            >
              <svg
                className="fill-current pointer-events-none text-gray-800 w-4 h-4"
                viewBox="0 0 20 20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12.9 14.32a8 8 0 1 1 1.41-1.41l5.35 5.33-1.42 1.42-5.33-5.34zM8 14A6 6 0 1 0 8 2a6 6 0 0 0 0 12z"
                />
              </svg>
            </div>
          </div>
        </div>
        <ul
          className="list-reset lg:flex justify-end items-center"
        >
          <li
            className="mr-3 py-2 lg:py-0"
          >
            <a
              className="inline-block text-gray-900 no-underline hover:text-gray-900 hover:underline py-2 px-4"
              href="#"
              onClick={[Function]}
            >
              Modal
            </a>
          </li>
          <li
            className="mr-3 py-2 lg:py-0"
          >
            <a
              className="text-gray-900 no-underline hover:text-gray-900 "
              href="#"
              onClick={[Function]}
            >
              <svg
                className="h-8 py-2 px-4"
                viewBox="0 0 20 20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M2.8 15.8L0 13v7h7l-2.8-2.8 4.34-4.32-1.42-1.42L2.8 15.8zM17.2 4.2L20 7V0h-7l2.8 2.8-4.34 4.32 1.42 1.42L17.2 4.2zm-1.4 13L13 20h7v-7l-2.8 2.8-4.32-4.34-1.42 1.42 4.33 4.33zM4.2 2.8L7 0H0v7l2.8-2.8 4.32 4.34 1.42-1.42L4.2 2.8z"
                />
              </svg>
            </a>
          </li>
        </ul>
      </div>
    </div>
  </nav>
</div>
`;

exports[`Storyshots Menu fullscreen 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <nav
    className="w-full bg-white border-b border-gray-400"
    id="header"
  >
    <div
      className="w-full flex flex-no-wrap items-center justify-between mt-0 py-4"
    >
      <div
        className="pl-4 flex items-center"
      >
        <a
          className="text-gray-900 text-base no-underline hover:no-underline font-extrabold text-xl"
          href="#"
        >
          Map
        </a>
      </div>
      <div
        className="flex-grow flex  items-center w-auto block"
        id="nav-content"
      >
        <div
          className="flex-1 w-full mx-auto max-w-sm content-center py-4 lg:py-0"
        >
          <div
            className="relative pull-right pl-4 pr-4 md:pr-0"
          >
            <div
              className="flex"
            >
              <input
                className="w-full 
                flex-shrink
                flex-grow
                flex-auto
                text-right
                leading-normal
                w-px
                flex-1
                border
                h-8
                transition
                border-grey-light
                rounded
                px-3
                focus:border-indigo-500
                focus:outline-none
                hover:bg-gray-200
                "
                defaultValue="Nürnberg"
                id="searchForm"
                type="search"
              />
              <button
                onClick={[Function]}
              >
                Search
              </button>
            </div>
            <div
              className="absolute search-icon"
              style={
                Object {
                  "left": "1.5rem",
                  "top": "0.5rem",
                }
              }
            >
              <svg
                className="fill-current pointer-events-none text-gray-800 w-4 h-4"
                viewBox="0 0 20 20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12.9 14.32a8 8 0 1 1 1.41-1.41l5.35 5.33-1.42 1.42-5.33-5.34zM8 14A6 6 0 1 0 8 2a6 6 0 0 0 0 12z"
                />
              </svg>
            </div>
          </div>
        </div>
        <ul
          className="list-reset lg:flex justify-end items-center"
        >
          <li
            className="mr-3 py-2 lg:py-0"
          >
            <a
              className="inline-block text-gray-900 no-underline hover:text-gray-900 hover:underline py-2 px-4"
              href="#"
              onClick={[Function]}
            >
              Modal
            </a>
          </li>
          <li
            className="mr-3 py-2 lg:py-0"
          >
            <a
              className="text-gray-900 no-underline hover:text-gray-900 "
              href="#"
              onClick={[Function]}
            >
              <svg
                className="h-8 py-2 px-4"
                viewBox="0 0 20 20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M10 8.586L2.929 1.515 1.515 2.929 8.586 10l-7.071 7.071 1.414 1.414L10 11.414l7.071 7.071 1.414-1.414L11.414 10l7.071-7.071-1.414-1.414L10 8.586z"
                />
              </svg>
            </a>
          </li>
        </ul>
      </div>
    </div>
  </nav>
</div>
`;

exports[`Storyshots Modal default 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <div
    className="
      fixed
      w-screen
      h-screen
      animated
      bg-smoke-dark
      fadeIn
      flex
      top-0
      left-0
      z-50
      "
  >
    <div
      className="
        overflow-x-hidden
        overflow-y-auto
        animated
        fadeInUp
        p-10
        m-auto
        md:relative
        pin-b
        align-top
        lg:w-full
        lg:max-w-6xl
        md:justify-center
        bg-white
        md:rounded
        flex
        flex-col
        lg:w-auto
        "
    >
      <div />
      <span
        className="absolute top-0 right-0 p-4"
        onClick={[Function]}
      >
        <svg
          className="
            h-6
            w-6
            fill-current
            text-gray-900
            hover:text-indigo-500"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10 8.586L2.929 1.515 1.515 2.929 8.586 10l-7.071 7.071 1.414 1.414L10 11.414l7.071 7.071 1.414-1.414L11.414 10l7.071-7.071-1.414-1.414L10 8.586z"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Modal not shown 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
/>
`;

exports[`Storyshots Modal with Form 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <div
    className="
      fixed
      w-screen
      h-screen
      animated
      bg-smoke-dark
      fadeIn
      flex
      top-0
      left-0
      z-50
      "
  >
    <div
      className="
        overflow-x-hidden
        overflow-y-auto
        animated
        fadeInUp
        p-10
        m-auto
        md:relative
        pin-b
        align-top
        lg:w-full
        lg:max-w-6xl
        md:justify-center
        bg-white
        md:rounded
        flex
        flex-col
        lg:w-auto
        "
    >
      <form>
        <div
          className="lg:flex lg:flex-wrap"
        >
          <div
            className="w-full lg:w-1/2 px-3"
          >
            <label
              className="block uppercase tracking-wide text-grey-darker text-xs font-bold"
            >
              Was?
            </label>
            <div
              className="
    flex 
    w-full 
    mt-2
    "
            >
              <span
                className="
      flex
      w-1/2
      lg:w-1/3
      items-center
      bg-gray-100
      rounded-l
      border
      border-r-0
      border-grey-light
      px-3
      text-grey-dark
      text-sm
      whitespace-no-wrap
      "
              >
                Praktikumsart
              </span>
              <select
                className="
      flex-shrink
      flex-grow
      flex-auto
      text-right
      leading-normal
      w-px
      flex-1
      border
      h-8
      border-grey-light
      rounded
      rounded-l-none
      px-3
      relative
      focus:border-indigo-500
      focus:outline-none
      hover:bg-gray-200
      "
              >
                <option
                  value="Praktikum im Studium"
                >
                  Praktikum im Studium
                </option>
                <option
                  value="Bachelor- oder Masterarbeit"
                >
                  Bachelor- oder Masterarbeit
                </option>
                <option
                  value="Stellen f&uuml;r Doktoranden und Doktorandinnen"
                >
                  Stellen f&uuml;r Doktoranden und Doktorandinnen
                </option>
                <option
                  value="Stellen f&uuml;r Duales Studium"
                >
                  Stellen f&uuml;r Duales Studium
                </option>
                <option
                  value="Werkstudentent&auml;tigkeit"
                >
                  Werkstudentent&auml;tigkeit
                </option>
                <option
                  value="Studentenjob"
                >
                  Studentenjob
                </option>
                <option
                  value="Stelle f&uuml;r Absolventen und Absolventinnen"
                >
                  Stelle f&uuml;r Absolventen und Absolventinnen
                </option>
                <option
                  value="Traineeprogramm"
                >
                  Traineeprogramm
                </option>
                <option
                  value="Stelle, die erste Berufserfahrung voraussetzt"
                >
                  Stelle, die erste Berufserfahrung voraussetzt
                </option>
                <option
                  value="Stellen f&uuml;r Studienabbrecher"
                >
                  Stellen f&uuml;r Studienabbrecher
                </option>
              </select>
            </div>
            <div
              className="
    flex 
    w-full 
    mt-2
    "
            >
              <span
                className="
      flex
      w-1/2
      lg:w-1/3
      items-center
      bg-gray-100
      rounded-l
      border
      border-r-0
      border-grey-light
      px-3
      text-grey-dark
      text-sm
      whitespace-no-wrap
      "
              >
                Faukultät
              </span>
              <select
                className="
      flex-shrink
      flex-grow
      flex-auto
      text-right
      leading-normal
      w-px
      flex-1
      border
      h-8
      border-grey-light
      rounded
      rounded-l-none
      px-3
      relative
      focus:border-indigo-500
      focus:outline-none
      hover:bg-gray-200
      "
              >
                <option
                  value="Angewandte Chemie"
                >
                  Angewandte Chemie
                </option>
                <option
                  value="Angewandte Mathematik, Physik und Allgemeinwissenschaften"
                >
                  Angewandte Mathematik, Physik und Allgemeinwissenschaften
                </option>
                <option
                  value="Architektur"
                >
                  Architektur
                </option>
                <option
                  value="Bauingenieurwesen"
                >
                  Bauingenieurwesen
                </option>
                <option
                  value="Betriebswirtschaft"
                >
                  Betriebswirtschaft
                </option>
                <option
                  value="Design"
                >
                  Design
                </option>
                <option
                  value="Elektrotechnik Feinwerktechnik Informationstechnik"
                >
                  Elektrotechnik Feinwerktechnik Informationstechnik
                </option>
                <option
                  value="Informatik"
                >
                  Informatik
                </option>
                <option
                  value="Maschinenbau und Versorgungstechnik"
                >
                  Maschinenbau und Versorgungstechnik
                </option>
                <option
                  value="Sozialwissenschaften"
                >
                  Sozialwissenschaften
                </option>
                <option
                  value="Verfahrenstechnik"
                >
                  Verfahrenstechnik
                </option>
                <option
                  value="Werkstofftechnik"
                >
                  Werkstofftechnik
                </option>
              </select>
            </div>
            <div
              className="
    flex 
    w-full 
    mt-2
    "
            >
              <span
                className="
      flex
      w-1/2
      lg:w-1/3
      items-center
      bg-gray-100
      rounded-l
      border
      border-r-0
      border-grey-light
      px-3
      text-grey-dark
      text-sm
      whitespace-no-wrap
      "
              >
                Branche
              </span>
              <select
                className="
      flex-shrink
      flex-grow
      flex-auto
      text-right
      leading-normal
      w-px
      flex-1
      border
      h-8
      border-grey-light
      rounded
      rounded-l-none
      px-3
      relative
      focus:border-indigo-500
      focus:outline-none
      hover:bg-gray-200
      "
              >
                <option
                  value="Abfallwirtschaft"
                >
                  Abfallwirtschaft
                </option>
                <option
                  value="Anlagen- und Maschinenbau"
                >
                  Anlagen- und Maschinenbau
                </option>
                <option
                  value="Automatisierungstechnik"
                >
                  Automatisierungstechnik
                </option>
                <option
                  value="Automobilbau"
                >
                  Automobilbau
                </option>
                <option
                  value="Banken, Versicherung, Immobilien,"
                >
                  Banken, Versicherung, Immobilien,
                </option>
                <option
                  value="Finanzdienstleistung"
                >
                  Finanzdienstleistung
                </option>
                <option
                  value="Bauwesen, Architektur"
                >
                  Bauwesen, Architektur
                </option>
                <option
                  value="Bergbau"
                >
                  Bergbau
                </option>
                <option
                  value="Bildung&amp;Training"
                >
                  Bildung&amp;Training
                </option>
                <option
                  value="Biotechnik, Pharmazie"
                >
                  Biotechnik, Pharmazie
                </option>
                <option
                  value="Chemie- und erd&ouml;lverarbeitende Industrie"
                >
                  Chemie- und erd&ouml;lverarbeitende Industrie
                </option>
                <option
                  value="Druck, Papier und Verpackungsindustrie"
                >
                  Druck, Papier und Verpackungsindustrie
                </option>
                <option
                  value="Einzel-, Gro&szlig;- und Au&szlig;enhandel"
                >
                  Einzel-, Gro&szlig;- und Au&szlig;enhandel
                </option>
                <option
                  value="Elektrotechnik, Feinmechanik, Optik"
                >
                  Elektrotechnik, Feinmechanik, Optik
                </option>
                <option
                  value="Energie-/Wasserversorgung"
                >
                  Energie-/Wasserversorgung
                </option>
                <option
                  value="Fahrzeugbau/-zulieferer"
                >
                  Fahrzeugbau/-zulieferer
                </option>
                <option
                  value="Gastronomie, Touristik"
                >
                  Gastronomie, Touristik
                </option>
                <option
                  value="Gesundheit, Soziale Dienste"
                >
                  Gesundheit, Soziale Dienste
                </option>
                <option
                  value="Glas, Keramik"
                >
                  Glas, Keramik
                </option>
                <option
                  value="Holz- und M&ouml;belindustrie"
                >
                  Holz- und M&ouml;belindustrie
                </option>
                <option
                  value="Ingenieurdienstleistung"
                >
                  Ingenieurdienstleistung
                </option>
                <option
                  value="Internet"
                >
                  Internet
                </option>
                <option
                  value="IT-Dienstleistung, EDV-Schulung"
                >
                  IT-Dienstleistung, EDV-Schulung
                </option>
                <option
                  value="IT-Hardware – Programmierung und Design"
                >
                  IT-Hardware – Programmierung und Design
                </option>
                <option
                  value="IT-Softwareentwicklung"
                >
                  IT-Softwareentwicklung
                </option>
                <option
                  value="Konsumg&uuml;ter"
                >
                  Konsumg&uuml;ter
                </option>
                <option
                  value="Kunst, Kultur"
                >
                  Kunst, Kultur
                </option>
                <option
                  value="Kunststoffindustrie, -verarbeitung"
                >
                  Kunststoffindustrie, -verarbeitung
                </option>
                <option
                  value="Land-, Forst-, Fischwirtschaft"
                >
                  Land-, Forst-, Fischwirtschaft
                </option>
                <option
                  value="Luft- und Raumfahrt"
                >
                  Luft- und Raumfahrt
                </option>
                <option
                  value="Management, Beratung"
                >
                  Management, Beratung
                </option>
                <option
                  value="Marketing, Werbung &amp; PR"
                >
                  Marketing, Werbung &amp; PR
                </option>
                <option
                  value="Marktforschung"
                >
                  Marktforschung
                </option>
                <option
                  value="Medien"
                >
                  Medien
                </option>
                <option
                  value="Medizintechnik"
                >
                  Medizintechnik
                </option>
                <option
                  value="Metall"
                >
                  Metall
                </option>
                <option
                  value="Nahrungs- und Genussmittel"
                >
                  Nahrungs- und Genussmittel
                </option>
                <option
                  value="&Ouml;ffentlicher Dienst und Verb&auml;nde"
                >
                  &Ouml;ffentlicher Dienst und Verb&auml;nde
                </option>
                <option
                  value="Personaldienstleistung"
                >
                  Personaldienstleistung
                </option>
                <option
                  value="Petrochemie"
                >
                  Petrochemie
                </option>
                <option
                  value="Recht, Steuern, Finanzen, Controlling"
                >
                  Recht, Steuern, Finanzen, Controlling
                </option>
                <option
                  value="Sonstige Branche"
                >
                  Sonstige Branche
                </option>
                <option
                  value="Sonstige Dienstleistung"
                >
                  Sonstige Dienstleistung
                </option>
                <option
                  value="Telekommunikation"
                >
                  Telekommunikation
                </option>
                <option
                  value="Textil, Leder, Bekleidung"
                >
                  Textil, Leder, Bekleidung
                </option>
                <option
                  value="Verkehr, Lager, Logistik"
                >
                  Verkehr, Lager, Logistik
                </option>
                <option
                  value="Wissenschaft, Forschung &amp; Entwicklung"
                >
                  Wissenschaft, Forschung &amp; Entwicklung
                </option>
              </select>
            </div>
            <div
              className="flex w-full mt-2"
            >
              <span
                className="flex w-1/2 lg:w-1/3 items-center bg-gray-100 rounded-l border border-r-0 border-grey-light px-3 text-grey-dark text-sm whitespace-no-wrap"
              >
                Stichworte
              </span>
              <input
                className="
        flex-shrink
        flex-grow
        flex-auto
        text-right
        leading-normal
        w-px
        flex-1
        border
        h-8
        border-grey-light
        rounded
        rounded-l-none
        px-3
        relative
        focus:border-indigo-500
        focus:outline-none
        hover:bg-gray-200
      "
                type="text"
              />
            </div>
          </div>
          <div
            className="w-full lg:w-1/2 px-3"
          >
            <label
              className="block uppercase tracking-wide text-grey-darker text-xs font-bold mt-8 lg:mt-0"
            >
              Wo?
            </label>
            <div
              className="flex w-full mt-2"
            >
              <span
                className="flex w-1/2 lg:w-1/3 items-center bg-gray-100 rounded-l border border-r-0 border-grey-light px-3 text-grey-dark text-sm whitespace-no-wrap"
              >
                Ort oder Adresse
              </span>
              <input
                className="
        flex-shrink
        flex-grow
        flex-auto
        text-right
        leading-normal
        w-px
        flex-1
        border
        h-8
        border-grey-light
        rounded
        rounded-l-none
        px-3
        relative
        focus:border-indigo-500
        focus:outline-none
        hover:bg-gray-200
      "
                type="text"
              />
            </div>
            <div
              className="flex w-full mt-2"
            >
              <span
                className="
            flex
            w-full
            items-center
            bg-gray-100
            rounded-l
            border
            border-r-0
            border-grey-light
            px-3
            text-grey-dark
            text-sm
            whitespace-no-wrap
            "
              >
                Umkreissuche mit
              </span>
              <input
                className="
              overflow-x-hidden
              text-right
              leading-normal
              border
              h-8
              border-grey-light
              px-3
              focus:border-indigo-500
              focus:outline-none
              hover:bg-gray-200
              "
                defaultValue="100"
                type="number"
              />
              <span
                className="flex flex-shrink items-center leading-normal bg-gray-100 rounded rounded-l-none border border-l-0 border-grey-light px-3 whitespace-no-wrap text-grey-dark text-sm"
              >
                km Radius
              </span>
            </div>
          </div>
        </div>
        <div>
          <label
            className="block uppercase tracking-wide text-grey-darker text-xs font-bold mt-8 ml-3"
          >
            Und Ausserdem...
          </label>
          <div
            className="flex flex-wrap"
          >
            <div
              className="w-full lg:w-1/2 px-3"
            >
              <div
                className="
    flex 
    w-full 
    mt-2
    "
              >
                <span
                  className="
      flex
      w-1/2
      lg:w-1/3
      items-center
      bg-gray-100
      rounded-l
      border
      border-r-0
      border-grey-light
      px-3
      text-grey-dark
      text-sm
      whitespace-no-wrap
      "
                >
                  Vertragsart
                </span>
                <select
                  className="
      flex-shrink
      flex-grow
      flex-auto
      text-right
      leading-normal
      w-px
      flex-1
      border
      h-8
      border-grey-light
      rounded
      rounded-l-none
      px-3
      relative
      focus:border-indigo-500
      focus:outline-none
      hover:bg-gray-200
      "
                >
                  <option
                    value="Befristet"
                  >
                    Befristet
                  </option>
                  <option
                    value="Festanstellung"
                  >
                    Festanstellung
                  </option>
                  <option
                    value="Freie Mitarbeit"
                  >
                    Freie Mitarbeit
                  </option>
                  <option
                    value="Projektarbeit"
                  >
                    Projektarbeit
                  </option>
                  <option
                    value="Teilzeit"
                  >
                    Teilzeit
                  </option>
                  <option
                    value="Vollzeit"
                  >
                    Vollzeit
                  </option>
                </select>
              </div>
              <div
                className="
    flex 
    w-full 
    mt-2
    "
              >
                <span
                  className="
      flex
      w-1/2
      lg:w-1/3
      items-center
      bg-gray-100
      rounded-l
      border
      border-r-0
      border-grey-light
      px-3
      text-grey-dark
      text-sm
      whitespace-no-wrap
      "
                >
                  Sprachkenntnisse
                </span>
                <select
                  className="
      flex-shrink
      flex-grow
      flex-auto
      text-right
      leading-normal
      w-px
      flex-1
      border
      h-8
      border-grey-light
      rounded
      rounded-l-none
      px-3
      relative
      focus:border-indigo-500
      focus:outline-none
      hover:bg-gray-200
      "
                >
                  <option
                    value="Deutsch"
                  >
                    Deutsch
                  </option>
                  <option
                    value="Deutscher Dialekt (Schweizerdeutsch)"
                  >
                    Deutscher Dialekt (Schweizerdeutsch)
                  </option>
                  <option
                    value="Englisch"
                  >
                    Englisch
                  </option>
                  <option
                    value="Englisch (Technisches Englisch)"
                  >
                    Englisch (Technisches Englisch)
                  </option>
                  <option
                    value="Englisch (Wirtschafts- oder Businessenglisch)d"
                  >
                    Englisch (Wirtschafts- oder Businessenglisch)d
                  </option>
                  <option
                    value="Spanisch"
                  >
                    Spanisch
                  </option>
                  <option
                    value="Franz&ouml;sisch"
                  >
                    Franz&ouml;sisch
                  </option>
                  <option
                    value="Afrikaansd"
                  >
                    Afrikaansd
                  </option>
                  <option
                    value="Akan/Twi (Westafrika)d"
                  >
                    Akan/Twi (Westafrika)d
                  </option>
                  <option
                    value="Albanischd"
                  >
                    Albanischd
                  </option>
                  <option
                    value="Amharisch (&Auml;thiopien)"
                  >
                    Amharisch (&Auml;thiopien)
                  </option>
                  <option
                    value="Arabischd"
                  >
                    Arabischd
                  </option>
                  <option
                    value="Aram&auml;isch/Syrischd"
                  >
                    Aram&auml;isch/Syrischd
                  </option>
                  <option
                    value="Armenischd"
                  >
                    Armenischd
                  </option>
                  <option
                    value="Aserbaidschanischd"
                  >
                    Aserbaidschanischd
                  </option>
                  <option
                    value="Bambara (Westafrika, Mali)"
                  >
                    Bambara (Westafrika, Mali)
                  </option>
                  <option
                    value="Bengalid"
                  >
                    Bengalid
                  </option>
                  <option
                    value="Birmanischd"
                  >
                    Birmanischd
                  </option>
                  <option
                    value="Bosnischd"
                  >
                    Bosnischd
                  </option>
                  <option
                    value="Bulgarischd"
                  >
                    Bulgarischd
                  </option>
                  <option
                    value="Chinesischd"
                  >
                    Chinesischd
                  </option>
                  <option
                    value="D&auml;nischd"
                  >
                    D&auml;nischd
                  </option>
                  <option
                    value="Estnischd"
                  >
                    Estnischd
                  </option>
                  <option
                    value="Filipino (Tagalog)d"
                  >
                    Filipino (Tagalog)d
                  </option>
                  <option
                    value="Finnischd"
                  >
                    Finnischd
                  </option>
                  <option
                    value="Georgischd"
                  >
                    Georgischd
                  </option>
                  <option
                    value="Griechischd"
                  >
                    Griechischd
                  </option>
                  <option
                    value="Gujaratid"
                  >
                    Gujaratid
                  </option>
                  <option
                    value="Hausa (Westafrika)"
                  >
                    Hausa (Westafrika)
                  </option>
                  <option
                    value="Hebr&auml;ischd"
                  >
                    Hebr&auml;ischd
                  </option>
                  <option
                    value="Hindid"
                  >
                    Hindid
                  </option>
                  <option
                    value="Indonesischd"
                  >
                    Indonesischd
                  </option>
                  <option
                    value="Isl&auml;ndischd"
                  >
                    Isl&auml;ndischd
                  </option>
                  <option
                    value="Italienisch"
                  >
                    Italienisch
                  </option>
                  <option
                    value="Jamaika-Kreolisch (Patois)"
                  >
                    Jamaika-Kreolisch (Patois)
                  </option>
                  <option
                    value="Kambodschanisch (Khmer)d"
                  >
                    Kambodschanisch (Khmer)d
                  </option>
                  <option
                    value="Kasachischd"
                  >
                    Kasachischd
                  </option>
                  <option
                    value="Kirgisischd"
                  >
                    Kirgisischd
                  </option>
                  <option
                    value="Koreanischd"
                  >
                    Koreanischd
                  </option>
                  <option
                    value="Kroatischd"
                  >
                    Kroatischd
                  </option>
                  <option
                    value="Kurdischd"
                  >
                    Kurdischd
                  </option>
                  <option
                    value="Laotischd"
                  >
                    Laotischd
                  </option>
                  <option
                    value="Lettischd"
                  >
                    Lettischd
                  </option>
                  <option
                    value="Letzeburgisch (Luxemburg)"
                  >
                    Letzeburgisch (Luxemburg)
                  </option>
                  <option
                    value="Malayalamd"
                  >
                    Malayalamd
                  </option>
                  <option
                    value="Marathid"
                  >
                    Marathid
                  </option>
                  <option
                    value="Mazedonischd"
                  >
                    Mazedonischd
                  </option>
                  <option
                    value="Mongolischd"
                  >
                    Mongolischd
                  </option>
                  <option
                    value="Nepalesischd"
                  >
                    Nepalesischd
                  </option>
                  <option
                    value="Niederl&auml;ndisch/Fl&auml;misch"
                  >
                    Niederl&auml;ndisch/Fl&auml;misch
                  </option>
                  <option
                    value="Pakistanisch/Urdud"
                  >
                    Pakistanisch/Urdud
                  </option>
                  <option
                    value="Paschtu/Paschto/Pashto (Afghanistan)"
                  >
                    Paschtu/Paschto/Pashto (Afghanistan)
                  </option>
                  <option
                    value="Portugiesischd"
                  >
                    Portugiesischd
                  </option>
                  <option
                    value="Punjabid"
                  >
                    Punjabid
                  </option>
                  <option
                    value="Romanid"
                  >
                    Romanid
                  </option>
                  <option
                    value="Rum&auml;nischd"
                  >
                    Rum&auml;nischd
                  </option>
                  <option
                    value="Russisch"
                  >
                    Russisch
                  </option>
                  <option
                    value="Schwedischd"
                  >
                    Schwedischd
                  </option>
                  <option
                    value="Serbischd"
                  >
                    Serbischd
                  </option>
                  <option
                    value="Singhalesischd"
                  >
                    Singhalesischd
                  </option>
                  <option
                    value="Slowakischd"
                  >
                    Slowakischd
                  </option>
                  <option
                    value="Slowenischd"
                  >
                    Slowenischd
                  </option>
                  <option
                    value="Somalid"
                  >
                    Somalid
                  </option>
                  <option
                    value="Sorbisch/Wendischd"
                  >
                    Sorbisch/Wendischd
                  </option>
                  <option
                    value="Suaheli (Ostafrika)d"
                  >
                    Suaheli (Ostafrika)d
                  </option>
                  <option
                    value="Taiwanischd"
                  >
                    Taiwanischd
                  </option>
                  <option
                    value="Tamild"
                  >
                    Tamild
                  </option>
                  <option
                    value="Telugud"
                  >
                    Telugud
                  </option>
                  <option
                    value="Thaid"
                  >
                    Thaid
                  </option>
                  <option
                    value="Tibetischd"
                  >
                    Tibetischd
                  </option>
                  <option
                    value="Tigrinja (Eritrea)d"
                  >
                    Tigrinja (Eritrea)d
                  </option>
                  <option
                    value="Tschechischd"
                  >
                    Tschechischd
                  </option>
                  <option
                    value="Tschetschenischd"
                  >
                    Tschetschenischd
                  </option>
                  <option
                    value="T&uuml;rkisch"
                  >
                    T&uuml;rkisch
                  </option>
                  <option
                    value="Uigurischd"
                  >
                    Uigurischd
                  </option>
                  <option
                    value="Ukrainischd"
                  >
                    Ukrainischd
                  </option>
                  <option
                    value="Ungarischd"
                  >
                    Ungarischd
                  </option>
                  <option
                    value="Usbekischd"
                  >
                    Usbekischd
                  </option>
                  <option
                    value="Vietnamesischd"
                  >
                    Vietnamesischd
                  </option>
                  <option
                    value="Wei&szlig;russisch"
                  >
                    Wei&szlig;russisch
                  </option>
                  <option
                    value="Yoruba (Westafrika)"
                  >
                    Yoruba (Westafrika)
                  </option>
                </select>
              </div>
            </div>
            <div
              className="w-full lg:w-1/2 px-3"
            >
              <div
                className="
    flex 
    w-full 
    mt-2
    "
              >
                <span
                  className="
      flex
      w-1/2
      lg:w-1/3
      items-center
      bg-gray-100
      rounded-l
      border
      border-r-0
      border-grey-light
      px-3
      text-grey-dark
      text-sm
      whitespace-no-wrap
      "
                >
                  Bewerbung in
                </span>
                <select
                  className="
      flex-shrink
      flex-grow
      flex-auto
      text-right
      leading-normal
      w-px
      flex-1
      border
      h-8
      border-grey-light
      rounded
      rounded-l-none
      px-3
      relative
      focus:border-indigo-500
      focus:outline-none
      hover:bg-gray-200
      "
                >
                  <option
                    value="Deutsch"
                  >
                    Deutsch
                  </option>
                  <option
                    value="Deutscher Dialekt (Schweizerdeutsch)"
                  >
                    Deutscher Dialekt (Schweizerdeutsch)
                  </option>
                  <option
                    value="Englisch"
                  >
                    Englisch
                  </option>
                  <option
                    value="Englisch (Technisches Englisch)"
                  >
                    Englisch (Technisches Englisch)
                  </option>
                  <option
                    value="Englisch (Wirtschafts- oder Businessenglisch)d"
                  >
                    Englisch (Wirtschafts- oder Businessenglisch)d
                  </option>
                  <option
                    value="Spanisch"
                  >
                    Spanisch
                  </option>
                  <option
                    value="Franz&ouml;sisch"
                  >
                    Franz&ouml;sisch
                  </option>
                  <option
                    value="Afrikaansd"
                  >
                    Afrikaansd
                  </option>
                  <option
                    value="Akan/Twi (Westafrika)d"
                  >
                    Akan/Twi (Westafrika)d
                  </option>
                  <option
                    value="Albanischd"
                  >
                    Albanischd
                  </option>
                  <option
                    value="Amharisch (&Auml;thiopien)"
                  >
                    Amharisch (&Auml;thiopien)
                  </option>
                  <option
                    value="Arabischd"
                  >
                    Arabischd
                  </option>
                  <option
                    value="Aram&auml;isch/Syrischd"
                  >
                    Aram&auml;isch/Syrischd
                  </option>
                  <option
                    value="Armenischd"
                  >
                    Armenischd
                  </option>
                  <option
                    value="Aserbaidschanischd"
                  >
                    Aserbaidschanischd
                  </option>
                  <option
                    value="Bambara (Westafrika, Mali)"
                  >
                    Bambara (Westafrika, Mali)
                  </option>
                  <option
                    value="Bengalid"
                  >
                    Bengalid
                  </option>
                  <option
                    value="Birmanischd"
                  >
                    Birmanischd
                  </option>
                  <option
                    value="Bosnischd"
                  >
                    Bosnischd
                  </option>
                  <option
                    value="Bulgarischd"
                  >
                    Bulgarischd
                  </option>
                  <option
                    value="Chinesischd"
                  >
                    Chinesischd
                  </option>
                  <option
                    value="D&auml;nischd"
                  >
                    D&auml;nischd
                  </option>
                  <option
                    value="Estnischd"
                  >
                    Estnischd
                  </option>
                  <option
                    value="Filipino (Tagalog)d"
                  >
                    Filipino (Tagalog)d
                  </option>
                  <option
                    value="Finnischd"
                  >
                    Finnischd
                  </option>
                  <option
                    value="Georgischd"
                  >
                    Georgischd
                  </option>
                  <option
                    value="Griechischd"
                  >
                    Griechischd
                  </option>
                  <option
                    value="Gujaratid"
                  >
                    Gujaratid
                  </option>
                  <option
                    value="Hausa (Westafrika)"
                  >
                    Hausa (Westafrika)
                  </option>
                  <option
                    value="Hebr&auml;ischd"
                  >
                    Hebr&auml;ischd
                  </option>
                  <option
                    value="Hindid"
                  >
                    Hindid
                  </option>
                  <option
                    value="Indonesischd"
                  >
                    Indonesischd
                  </option>
                  <option
                    value="Isl&auml;ndischd"
                  >
                    Isl&auml;ndischd
                  </option>
                  <option
                    value="Italienisch"
                  >
                    Italienisch
                  </option>
                  <option
                    value="Jamaika-Kreolisch (Patois)"
                  >
                    Jamaika-Kreolisch (Patois)
                  </option>
                  <option
                    value="Kambodschanisch (Khmer)d"
                  >
                    Kambodschanisch (Khmer)d
                  </option>
                  <option
                    value="Kasachischd"
                  >
                    Kasachischd
                  </option>
                  <option
                    value="Kirgisischd"
                  >
                    Kirgisischd
                  </option>
                  <option
                    value="Koreanischd"
                  >
                    Koreanischd
                  </option>
                  <option
                    value="Kroatischd"
                  >
                    Kroatischd
                  </option>
                  <option
                    value="Kurdischd"
                  >
                    Kurdischd
                  </option>
                  <option
                    value="Laotischd"
                  >
                    Laotischd
                  </option>
                  <option
                    value="Lettischd"
                  >
                    Lettischd
                  </option>
                  <option
                    value="Letzeburgisch (Luxemburg)"
                  >
                    Letzeburgisch (Luxemburg)
                  </option>
                  <option
                    value="Malayalamd"
                  >
                    Malayalamd
                  </option>
                  <option
                    value="Marathid"
                  >
                    Marathid
                  </option>
                  <option
                    value="Mazedonischd"
                  >
                    Mazedonischd
                  </option>
                  <option
                    value="Mongolischd"
                  >
                    Mongolischd
                  </option>
                  <option
                    value="Nepalesischd"
                  >
                    Nepalesischd
                  </option>
                  <option
                    value="Niederl&auml;ndisch/Fl&auml;misch"
                  >
                    Niederl&auml;ndisch/Fl&auml;misch
                  </option>
                  <option
                    value="Pakistanisch/Urdud"
                  >
                    Pakistanisch/Urdud
                  </option>
                  <option
                    value="Paschtu/Paschto/Pashto (Afghanistan)"
                  >
                    Paschtu/Paschto/Pashto (Afghanistan)
                  </option>
                  <option
                    value="Portugiesischd"
                  >
                    Portugiesischd
                  </option>
                  <option
                    value="Punjabid"
                  >
                    Punjabid
                  </option>
                  <option
                    value="Romanid"
                  >
                    Romanid
                  </option>
                  <option
                    value="Rum&auml;nischd"
                  >
                    Rum&auml;nischd
                  </option>
                  <option
                    value="Russisch"
                  >
                    Russisch
                  </option>
                  <option
                    value="Schwedischd"
                  >
                    Schwedischd
                  </option>
                  <option
                    value="Serbischd"
                  >
                    Serbischd
                  </option>
                  <option
                    value="Singhalesischd"
                  >
                    Singhalesischd
                  </option>
                  <option
                    value="Slowakischd"
                  >
                    Slowakischd
                  </option>
                  <option
                    value="Slowenischd"
                  >
                    Slowenischd
                  </option>
                  <option
                    value="Somalid"
                  >
                    Somalid
                  </option>
                  <option
                    value="Sorbisch/Wendischd"
                  >
                    Sorbisch/Wendischd
                  </option>
                  <option
                    value="Suaheli (Ostafrika)d"
                  >
                    Suaheli (Ostafrika)d
                  </option>
                  <option
                    value="Taiwanischd"
                  >
                    Taiwanischd
                  </option>
                  <option
                    value="Tamild"
                  >
                    Tamild
                  </option>
                  <option
                    value="Telugud"
                  >
                    Telugud
                  </option>
                  <option
                    value="Thaid"
                  >
                    Thaid
                  </option>
                  <option
                    value="Tibetischd"
                  >
                    Tibetischd
                  </option>
                  <option
                    value="Tigrinja (Eritrea)d"
                  >
                    Tigrinja (Eritrea)d
                  </option>
                  <option
                    value="Tschechischd"
                  >
                    Tschechischd
                  </option>
                  <option
                    value="Tschetschenischd"
                  >
                    Tschetschenischd
                  </option>
                  <option
                    value="T&uuml;rkisch"
                  >
                    T&uuml;rkisch
                  </option>
                  <option
                    value="Uigurischd"
                  >
                    Uigurischd
                  </option>
                  <option
                    value="Ukrainischd"
                  >
                    Ukrainischd
                  </option>
                  <option
                    value="Ungarischd"
                  >
                    Ungarischd
                  </option>
                  <option
                    value="Usbekischd"
                  >
                    Usbekischd
                  </option>
                  <option
                    value="Vietnamesischd"
                  >
                    Vietnamesischd
                  </option>
                  <option
                    value="Wei&szlig;russisch"
                  >
                    Wei&szlig;russisch
                  </option>
                  <option
                    value="Yoruba (Westafrika)"
                  >
                    Yoruba (Westafrika)
                  </option>
                </select>
              </div>
              <div
                className="flex w-full mt-2"
              >
                <span
                  className="flex w-1/2 lg:w-1/3 items-center bg-gray-100 rounded-l border border-r-0 border-grey-light px-3 text-grey-dark text-sm whitespace-no-wrap"
                >
                  Ohne diese Stichworte
                </span>
                <input
                  className="
        flex-shrink
        flex-grow
        flex-auto
        text-right
        leading-normal
        w-px
        flex-1
        border
        h-8
        border-grey-light
        rounded
        rounded-l-none
        px-3
        relative
        focus:border-indigo-500
        focus:outline-none
        hover:bg-gray-200
      "
                  type="text"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          className="mx-3 flex justify-end"
        >
          <button
            className="
          block 
          w-full
          bg-gray-200
          border-b-2
          border-indigo-500
          hover:bg-indigo-200
          text-gray-900
          font-bold
          py-2
          px-8
          mt-8
          rounded
          lg:w-auto
          
          "
            type="submit"
          >
            Search
          </button>
        </div>
      </form>
      <span
        className="absolute top-0 right-0 p-4"
        onClick={[Function]}
      >
        <svg
          className="
            h-6
            w-6
            fill-current
            text-gray-900
            hover:text-indigo-500"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10 8.586L2.929 1.515 1.515 2.929 8.586 10l-7.071 7.071 1.414 1.414L10 11.414l7.071 7.071 1.414-1.414L11.414 10l7.071-7.071-1.414-1.414L10 8.586z"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Notification default 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <li
    className="w-full p-4 m-4 list-none flex justify-between bg-gray-400"
  >
    <div>
      <span
        className="text-lg font-bold pb-4"
      >
        SOMETHING_ELSE
      </span>
      <p
        className="leading-tight"
      >
        My Placeholder
      </p>
    </div>
    <a
      className="text-gray-900 no-underline hover:text-gray-400 "
      href="#"
      onClick={[Function]}
    >
      <svg
        className="h-8 py-2 px-4"
        viewBox="0 0 20 20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10 8.586L2.929 1.515 1.515 2.929 8.586 10l-7.071 7.071 1.414 1.414L10 11.414l7.071 7.071 1.414-1.414L11.414 10l7.071-7.071-1.414-1.414L10 8.586z"
        />
      </svg>
    </a>
  </li>
</div>
`;

exports[`Storyshots Notification error 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <li
    className="w-full p-4 m-4 list-none flex justify-between bg-red-400"
  >
    <div>
      <span
        className="text-lg font-bold pb-4"
      >
        ERROR
      </span>
      <p
        className="leading-tight"
      >
        My Placeholder
      </p>
    </div>
    <a
      className="text-gray-900 no-underline hover:text-gray-400 "
      href="#"
      onClick={[Function]}
    >
      <svg
        className="h-8 py-2 px-4"
        viewBox="0 0 20 20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10 8.586L2.929 1.515 1.515 2.929 8.586 10l-7.071 7.071 1.414 1.414L10 11.414l7.071 7.071 1.414-1.414L11.414 10l7.071-7.071-1.414-1.414L10 8.586z"
        />
      </svg>
    </a>
  </li>
</div>
`;

exports[`Storyshots Notification info 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <li
    className="w-full p-4 m-4 list-none flex justify-between bg-blue-400"
  >
    <div>
      <span
        className="text-lg font-bold pb-4"
      >
        INFO
      </span>
      <p
        className="leading-tight"
      >
        My Placeholder
      </p>
    </div>
    <a
      className="text-gray-900 no-underline hover:text-gray-400 "
      href="#"
      onClick={[Function]}
    >
      <svg
        className="h-8 py-2 px-4"
        viewBox="0 0 20 20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10 8.586L2.929 1.515 1.515 2.929 8.586 10l-7.071 7.071 1.414 1.414L10 11.414l7.071 7.071 1.414-1.414L11.414 10l7.071-7.071-1.414-1.414L10 8.586z"
        />
      </svg>
    </a>
  </li>
</div>
`;

exports[`Storyshots Notification success 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <li
    className="w-full p-4 m-4 list-none flex justify-between bg-green-400"
  >
    <div>
      <span
        className="text-lg font-bold pb-4"
      >
        SUCCESS
      </span>
      <p
        className="leading-tight"
      >
        My Placeholder
      </p>
    </div>
    <a
      className="text-gray-900 no-underline hover:text-gray-400 "
      href="#"
      onClick={[Function]}
    >
      <svg
        className="h-8 py-2 px-4"
        viewBox="0 0 20 20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10 8.586L2.929 1.515 1.515 2.929 8.586 10l-7.071 7.071 1.414 1.414L10 11.414l7.071 7.071 1.414-1.414L11.414 10l7.071-7.071-1.414-1.414L10 8.586z"
        />
      </svg>
    </a>
  </li>
</div>
`;

exports[`Storyshots Notification warning 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <li
    className="w-full p-4 m-4 list-none flex justify-between bg-orange-400"
  >
    <div>
      <span
        className="text-lg font-bold pb-4"
      >
        WARNING
      </span>
      <p
        className="leading-tight"
      >
        My Placeholder
      </p>
    </div>
    <a
      className="text-gray-900 no-underline hover:text-gray-400 "
      href="#"
      onClick={[Function]}
    >
      <svg
        className="h-8 py-2 px-4"
        viewBox="0 0 20 20"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M10 8.586L2.929 1.515 1.515 2.929 8.586 10l-7.071 7.071 1.414 1.414L10 11.414l7.071 7.071 1.414-1.414L11.414 10l7.071-7.071-1.414-1.414L10 8.586z"
        />
      </svg>
    </a>
  </li>
</div>
`;

exports[`Storyshots Popup default 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <div
    className="relative rounded-lg block flex items-center bg-gray-100 shadow-xl"
  >
    <div
      className="relative w-2/5 h-full overflow-hidden rounded-t-lg rounded-t-none rounded-l-lg"
    >
      <img
        alt=""
        className="absolute inset-0 w-full h-full object-cover object-center"
        src="https://www.designtagebuch.de/wp-content/uploads/mediathek//2019/01/bosch-markenzeichen-700x513.jpg"
      />
      <div
        className="absolute w-full h-full bg-jb-primary opacity-75"
      />
      <div
        className="absolute w-full h-full flex items-center justify-center fill-current text-white"
      >
        <span
          className="text-6xl font-black uppercase"
        >
          Bosch
        </span>
      </div>
      <div
        className="w-3/5 h-full flex items-center bg-gray-100 rounded-lg"
      >
        <div
          className="p-12 md:pr-24 md:pl-16 md:py-12"
        >
          <p
            className="text-gray-600"
          >
            <span
              className="text-gray-900"
            >
              Bosch
            </span>
             is a UK-based fashion retailer that has nearly doubled in size since last year. They integrated Stripe to deliver seamless checkout across mobile and web for customers in 100+ countries, all while automatically combating fraud.
          </p>
          <a
            className="flex items-baseline mt-3 text-indigo-600 hover:text-indigo-900 focus:text-indigo-900"
            href=""
          >
            <span>
              Learn more about our users
            </span>
            <span
              className="text-xs ml-1"
            >
              ➜
            </span>
          </a>
        </div>
        <svg
          className="hidden md:block absolute inset-y-0 h-full w-24 fill-current text-gray-100 -ml-12"
          preserveAspectRatio="none"
          viewBox="0 0 100 100"
        >
          <polygon
            points="0,100 100,50 100,0 0,0"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots TextInput default 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <div
    className="flex w-full mt-2"
  >
    <span
      className="flex w-1/2 lg:w-1/3 items-center bg-gray-100 rounded-l border border-r-0 border-grey-light px-3 text-grey-dark text-sm whitespace-no-wrap"
    >
      Test Label
    </span>
    <input
      className="
        flex-shrink
        flex-grow
        flex-auto
        text-right
        leading-normal
        w-px
        flex-1
        border
        h-8
        border-grey-light
        rounded
        rounded-l-none
        px-3
        relative
        focus:border-indigo-500
        focus:outline-none
        hover:bg-gray-200
      "
      placeholder="My Placeholder"
      type="text"
    />
  </div>
</div>
`;

exports[`Storyshots TextInput without Placeholder 1`] = `
<div
  style={
    Object {
      "padding": "3rem",
    }
  }
>
  <div
    className="flex w-full mt-2"
  >
    <span
      className="flex w-1/2 lg:w-1/3 items-center bg-gray-100 rounded-l border border-r-0 border-grey-light px-3 text-grey-dark text-sm whitespace-no-wrap"
    >
      Test Label
    </span>
    <input
      className="
        flex-shrink
        flex-grow
        flex-auto
        text-right
        leading-normal
        w-px
        flex-1
        border
        h-8
        border-grey-light
        rounded
        rounded-l-none
        px-3
        relative
        focus:border-indigo-500
        focus:outline-none
        hover:bg-gray-200
      "
      type="text"
    />
  </div>
</div>
`;
